--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,51 @@
 <h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
+<app-messages></app-messages>
+
+<app-like></app-like>
+
+<!-- <tr><td colspan="{{1 + 1}}">Three-Four</td></tr> -->
+
+<tr><td [attr.colspan]="1 + 1">Three-Four</td></tr>
+
+<table border=12>
+	<!--  expression calculates colspan=2 -->
+	<tr><td [attr.colspan]="1 + 1">One-Two</td></tr>
+	<tr><td>Five</td><td>Six</td></tr>
+</table>
+
+<!-- create and set an aria attribute for assistive technology -->
+<button [attr.aria-label]="actionName">{{actionName}} with Aria</button>
+
+<!-- toggle the "special" class on/off with a property -->
+<div [class.special]="isSpecial">The class binding is special</div>
+
+<!-- binding to `class.special` trumps the class attribute -->
+<div class="special"
+	 [class.special]="!isSpecial">This one is not so special</div>
+	 
+<div class="bad curly special">Bad curly special</div>
+
+<!-- reset/override all class names with a binding  -->
+<div class="bad curly special"
+	 [class]="badCurly">Bad curly</div>
+	 
+<hr>
+<button (click)="setCurrentClasses()">set current clases</button>
+<div (click)="setCurrentClasses()" [ngClass]="currentClasses">This div is initially saveable, unchanged, and special{{ currentClasses | json}}</div>
+
+<hr>
+<div [style.font-size]="isSpecial ? 'x-large' : 'smaller'" >
+	This div is x-large or smaller.
+</div>
+
+<hr>
+
+<div [class.special]="isSpecial"
+	(click)="changeSpecial()">
+	The class binding is special
+</div>
